syntax = "proto3";

package iomBroker;

option java_package = "com.sas.vscode.iom.bridge.connection.pb";
option java_multiple_files = true;


import "google/protobuf/empty.proto";

message ExecutionRequest {
  string  code = 1;
}

message ExecutionResponse { int32 rc = 1; }
message SetupConnectionResponse {int32 rc = 1;}
message ConnectionContext {
  string host = 1;
  string username = 2;
  string password = 3;

}

message CloseConnectionResponse {int32 rc = 1;}

message LogChunk {
  string content = 1;
}

message ErrorResponse {
  int32  code = 1;
  string message = 2;
  repeated string details = 3;
}

service ExecutionService {
  rpc SetupConnection(ConnectionContext) returns (SetupConnectionResponse){};
  rpc ExecuteCode(ExecutionRequest) returns (ExecutionResponse) {};
  rpc CloseConnection(google.protobuf.Empty) returns (CloseConnectionResponse) {};
  rpc FetchLog(google.protobuf.Empty) returns (stream LogChunk) {};
};